- try pipline env 17

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,19 +10,25 @@ jobs:
     runs-on: ubuntu-latest
     environment: prod
     env:
-      DOCKERHUB: 123
+      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     steps:
       - name: Tests1
         run: echo "Tests- ${{ secrets.DOCKERHUB_HOST }}"
       - name: Tests2
-        run: echo "${{ env.DOCKERHUB_HOST }}"
-      - name: Tests3
-        run: echo "${{ env.GITHUB_PATH }}"
+        run: echo "$DOCKERHUB_HOST + $DOCKERHUB_USERNAME + $DOCKERHUB_PASSWORD"
 
 #  build:
 #    runs-on: ubuntu-latest
+#    env:
+#      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
+#      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 #    steps:
 #    - uses: actions/checkout@v3
+#    - name: Login in Docker HUB
+#      run: echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_HOST"
 #    - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 #    - name: Push the Docker image
