--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,14 +22,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       IMAGE_NAME: "sulikoks/k8s-demo:test"
     steps:
     - uses: actions/checkout@v3
     - name: Login in Docker HUB
-      run: echo "$DOCKERHUB_PASSWORD" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_HOST"
+      run: echo ${{ secrets.DOCKERHUB_HOST }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build the Docker image
       run: docker build -t "$IMAGE_NAME" .
     - name: Push the Docker image
