--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,12 +21,13 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: tests
     env:
       IMAGE_NAME: "sulikoks/k8s-demo:test"
     steps:
     - uses: actions/checkout@v3
     - name: Login in Docker HUB
-      run: echo ${{ secrets.DOCKERHUB_HOST }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin ${{ secrets.DOCKERHUB_PASSWORD }}
+      run: echo "${{ secrets.DOCKERHUB_HOST }}" | docker login --username "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin "${{ secrets.DOCKERHUB_PASSWORD }}"
     - name: Build the Docker image
       run: docker build -t "$IMAGE_NAME" .
     - name: Push the Docker image
