- try pipline env 22

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,11 @@
 name: Docker Image CI
-
 on:
   push:
     branches: [ "master" ]
-
+  workflow_call:
+    secrets:
+      DOCKERHUB_HOST:
+        required: true
 jobs:
 
   tests:
