--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,10 +2,10 @@ name: Docker Image CI
 on:
   push:
     branches: [ "master" ]
-  workflow_call:
-    secrets:
-      DOCKERHUB_HOST:
-        required: true
+#  workflow_call:
+#    secrets:
+#      DOCKERHUB_HOST:
+#        required: true
 jobs:
 
   tests:
@@ -24,12 +24,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: tests
+    environment: prod
     env:
       IMAGE_NAME: "sulikoks/k8s-demo:test"
     steps:
     - uses: actions/checkout@v3
     - name: Login in Docker HUB
-      run: echo "${{ env.DOCKERHUB_HOST }}" | docker login --username "${{ env.DOCKERHUB_USERNAME }}" --password-stdin "${{ env.DOCKERHUB_PASSWORD }}"
+      run: echo "${{ secrets.DOCKERHUB_HOST }}" | docker login --username "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin "${{ secrets.DOCKERHUB_PASSWORD }}"
     - name: Build the Docker image
       run: docker build -t "$IMAGE_NAME" .
     - name: Push the Docker image
