--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,18 +20,37 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: tests
     environment: prod
-    env:
-      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      IMAGE_NAME: "sulikoks/k8s-demo:test"
     steps:
-    - uses: actions/checkout@v3
-    - name: Login in Docker HUB
-      run: echo "$DOCKERHUB_HOST" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_PASSWORD"
-    - name: Build the Docker image
-      run: docker build -t "$IMAGE_NAME" .
-    - name: Push the Docker image
-      run: docker push "$IMAGE_NAME"
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./Dockerfile
+        builder: ${{ steps.buildx.outputs.name }}
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:latest
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:buildcache
+        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:buildcache,mode=max
+#  build:
+#    runs-on: ubuntu-latest
+#    needs: tests
+#    environment: prod
+#    env:
+#      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
+#      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+#      IMAGE_NAME: "sulikoks/k8s-demo:test"
+#    steps:
+#    - uses: actions/checkout@v3
+#    - name: Login in Docker HUB
+#      run: echo "$DOCKERHUB_HOST" | docker login --username "$DOCKERHUB_USERNAME" --password-stdin "$DOCKERHUB_PASSWORD"
+#    - name: Build the Docker image
+#      run: docker build -t "$IMAGE_NAME" .
+#    - name: Push the Docker image
+#      run: docker push "$IMAGE_NAME"
