--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: tests
     environment: prod
+    env:
+      VERSION: ${{ npm run version --silent }}
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -34,7 +37,7 @@ jobs:
         file: ./Dockerfile
         builder: ${{ steps.buildx.outputs.name }}
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:v$(npm run version --silent)
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:v$VERSION
 #  build:
 #    runs-on: ubuntu-latest
 #    needs: tests
