--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
     needs: tests
     environment: prod
     env:
-      VERSION: ${{ npm run version --silent }}
+      VERSION: test
     steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
@@ -37,7 +37,7 @@ jobs:
         file: ./Dockerfile
         builder: ${{ steps.buildx.outputs.name }}
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:v$VERSION
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:$VERSION
 #  build:
 #    runs-on: ubuntu-latest
 #    needs: tests
