- try pipline env 29

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
         file: ./Dockerfile
         builder: ${{ steps.buildx.outputs.name }}
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:$VERSION
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:${{ env.VERSION }}
 #  build:
 #    runs-on: ubuntu-latest
 #    needs: tests
