--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,22 +5,22 @@ on:
 
 jobs:
 
-  tests:
-    runs-on: ubuntu-latest
-    environment: prod
-    env:
-      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-    steps:
-      - name: Tests1
-        run: echo "Tests- ${{ secrets.DOCKERHUB_HOST }}"
-      - name: Tests2
-        run: echo "$DOCKERHUB_HOST + $DOCKERHUB_USERNAME + $DOCKERHUB_PASSWORD"
+#  tests:
+#    runs-on: ubuntu-latest
+#    environment: prod
+#    env:
+#      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
+#      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+#    steps:
+#      - name: Tests1
+#        run: echo "Tests- ${{ secrets.DOCKERHUB_HOST }}"
+#      - name: Tests2
+#        run: echo "$DOCKERHUB_HOST + $DOCKERHUB_USERNAME + $DOCKERHUB_PASSWORD"
 
   build:
     runs-on: ubuntu-latest
-    needs: tests
+#    needs: tests
     environment: prod
     env:
       VERSION: test
@@ -34,7 +34,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./Dockerfile
+        file: Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:${{ env.VERSION }}
 #  build:
