--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,11 +25,14 @@ jobs:
     env:
       VERSION: test
     steps:
+    - uses: actions/checkout@v2
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#    - name: Set up Docker Buildx
+#      uses: docker/setup-buildx-action@v1
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
