--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,23 +23,25 @@ jobs:
 #    needs: tests
     environment: prod
     env:
-      VERSION: test
+      IMAGE_NAME: k8s-demo
+      VERSION: test2
     steps:
     - uses: actions/checkout@v2
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
+        registry: ${{ secrets.DOCKERHUB_HOST }}
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-#    - name: Set up Docker Buildx
-#      uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
         context: .
         file: Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/k8s-demo:${{ env.VERSION }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
 #  build:
 #    runs-on: ubuntu-latest
 #    needs: tests
