--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,40 +5,45 @@ on:
 
 jobs:
 
-#  tests:
-#    runs-on: ubuntu-latest
-#    environment: prod
-#    env:
-#      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
-#      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-#    steps:
-#      - name: Tests1
-#        run: echo "Tests- ${{ secrets.DOCKERHUB_HOST }}"
-#      - name: Tests2
-#        run: echo "$DOCKERHUB_HOST + $DOCKERHUB_USERNAME + $DOCKERHUB_PASSWORD"
-
-  build:
+  tests:
     runs-on: ubuntu-latest
-#    needs: tests
     environment: prod
     env:
-      IMAGE_NAME: k8s-demo
-      VERSION: test2
+      DOCKERHUB_HOST: ${{ secrets.DOCKERHUB_HOST }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+      - name: Get app version
+        run: |
+          VERSION=$(npm run version --silent)
+      - name: Tests1
+        run: echo "Tests- ${{ secrets.DOCKERHUB_HOST }}"
+      - name: Tests2
+        run: echo "$VERSION + $DOCKERHUB_PASSWORD"
+      - name: Tests3
+        run: echo "${{ env.VERSION }}"
+
+#  build:
+#    runs-on: ubuntu-latest
+##    needs: tests
+#    environment: prod
+#    env:
+#      IMAGE_NAME: k8s-demo
+#      VERSION: test2
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Login to Docker Hub
+#      uses: docker/login-action@v1
+#      with:
+#        username: ${{ secrets.DOCKERHUB_USERNAME }}
+#        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#    - name: Build and push
+#      uses: docker/build-push-action@v2
+#      with:
+#        context: .
+#        file: Dockerfile
+#        push: true
+#        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
 #  build:
 #    runs-on: ubuntu-latest
 #    needs: tests
