--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,27 +34,26 @@ jobs:
       - name: Tests3
         run: echo "${{ env.VERSION }}"
 
-#  build:
-#    runs-on: ubuntu-latest
-##    needs: tests
-#    environment: prod
-#    env:
-#      IMAGE_NAME: k8s-demo
-#      VERSION: test2
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Login to Docker Hub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKERHUB_USERNAME }}
-#        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-#    - name: Build and push
-#      uses: docker/build-push-action@v2
-#      with:
-#        context: .
-#        file: Dockerfile
-#        push: true
-#        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+  build:
+    runs-on: ubuntu-latest
+    needs: tests
+    environment: prod
+    env:
+      IMAGE_NAME: k8s-demo
+    steps:
+    - uses: actions/checkout@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
 
 
 
