--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,7 +39,7 @@ jobs:
           node-version: '14'
       - name: Get app version
         run: |
-          echo "VERSION=$(npm run version --silent)" >> $GITHUB_ENV
+          echo "VERSION=v$(npm run version --silent)" >> $GITHUB_ENV
 
       - uses: actions/checkout@v2
       - name: Login to Docker Hub
