--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: tests
     environment: prod
-    env:
-      IMAGE_NAME: k8s-demo
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js
@@ -28,6 +26,7 @@ jobs:
           node-version: '14'
       - name: Get app version
         run: |
+          echo "IMAGE_NAME=$(npm run name --silent)" >> $GITHUB_ENV
           echo "VERSION=v$(npm run version --silent)" >> $GITHUB_ENV
 
       - name: Login to Docker Hub
@@ -41,4 +40,6 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }},${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
