--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "docker_web_app",
-  "version": "1.0.6",
+  "name": "k8s-demo",
+  "version": "1.0.7",
   "description": "Node.js on Docker",
   "author": "First Last <first.last@example.com>",
   "main": "server.js",
   "scripts": {
     "start": "node index.js",
+    "name": "echo $npm_package_name",
     "version": "echo $npm_package_version",
     "build-image": "sh build-image.sh"
   },
