--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,19 +23,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: ./app
-      - name: Go to app directory
-        run: |
-          echo "$PWD"
-          ls -a
-          cd ./app
-          echo "$PWD"
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '14'
       - name: Get app version
         run: |
+          cd ./app
           echo "$PWD"
+          echo "-----------------------"
           ls -a
           echo "IMAGE_NAME=$(npm run name --silent)" >> $GITHUB_ENV
           echo "VERSION=v$(npm run version --silent)" >> $GITHUB_ENV
